--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,11 +14,23 @@ html {
  * Global layout stuff
  */
 
+
+main {
+  background-color: white;
+  width: 450px;
+  height: 450px;
+  margin: auto;
+  padding-top: 140px
+}
+
+
 body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
