--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,7 +18,7 @@ html {
 main {
   background-color: white;
   width: 450px;
-  height: 450px;
+  height: auto;
   margin: auto;
   padding-top: 140px
 }
