--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,13 +1,14 @@
 .new-tweet {
-  margin-bottom: : 2em;
   margin-left: 2em;
   margin-right: 2em;
+  padding: 1em;
   padding-left: 1em;
   padding-right: 1em;
   padding-bottom: 1em;
   background: #eee;
   border: 1px solid lightGray;
   border-radius: 5px;
+  margin-bottom: 2em;
 }
 
 h2 {
