--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,7 @@
   background: #eee;
   border: 1px solid lightGray;
   border-radius: 5px;
-  margin-bottom: 2em;
+  /*margin-bottom: 2em;*/
 }
 
 h2 {
